feat(tianshu): track closed-loop seed transitions